# `kglab` changelog

## 0.6.2

2022-11-23

  * update to `setuptools` to workaround potential vulnerabilities


## 0.6.1

2022-04-20

  * automated RDF tests, coordinated with `Oxigraph`; kudos @Mec-iS, @Tpt
  * begin refactoring `KnowledgeGraph` as abstract classes, per #237
  * update to Morph-KGC 2.0.0 and update links to the new documentation; kudos @ArenasGuerreroJulian


## 0.6.0

2022-03-23

  * include use of YARRRML in the R2RML tutorial in ex2_1; kudos @cutterkom
  * support for substituting the binding variables into a SPARQL query
  * add a NumPy-backed `RDFlib.Store` plugin


## 0.5.3

2022-03-15

  * adjusting dependency versions to avoid conflicts


## 0.5.2

2022-03-15

  * bump up versions of dependencies to fit Py 3.7+
  * improve testing based on pytest; kudos @Mec-iS
  * allow configuration for `RDFlib.Store` plugins


## 0.5.1

2022-03-10

  * CI action to build/push container image to DockerHub on release; kudos @RishiKumarRay


## 0.5.0

2022-03-08

  * improve Dockerfile (e.g., for use in regulated environments)
  * refactor tutorial dependencies out of library
  * remove dependency on PyTorch


## 0.4.4

2022-02-27

  * integration of `morph-kgc`; kudos @Mec-iS and @ArenasGuerreroJulian


## 0.4.3

2022-02-10

  * improved GPU detection when RAPIDS is not installed


## 0.4.2

2021-12-13

  * update `pySHACL` and `OWL-RL` to track updates in `RDFlib`
  * fixed `abort_on_error` flag for `pySHACL` integration; kudos @fils


## 0.4.1

2021-11-26

  * further testing/config for NVIDIA GPUs
  * fixes for Snyk security advisories
  * update to `RDFlib` 6.x, removing use of `json-ld` plugin
  * use `nbmake` to add test coverage of example notebooks into the CI pipeline; kudos @Mec-iS


## 0.4.0

2021-05-10

  * add multifile support for `load_jsonld()`; kudos @Ankush-Chander
  * warning about NumPy/TensorFlow version conflicts; kudos @CatChenal
  * roll back NumPy requirement to >= 1.19.2
  * documenting notes about how to handle "PEP 517" errors