@@ -11,7 +11,7 @@ import typing
 
 
 MIN_PY_VERSION: typing.Tuple = (3, 7,)
-__version__: str = "0.6.1"
+__version__: str = "0.6.2"
 
 
 def _versify (
