@@ -1,0 +1,110 @@
+[build-system]
+requires = ["flit_core >=3.2,<4"]
+build-backend = "flit_core.buildapi"
+
+[project]
+name = "kglab"
+authors = [
+    {name = "Paco Nathan", email = "info@derwen.ai"}
+]
+description = "A simple abstraction layer in Python for building knowledge graphs"
+readme = "README.md"
+license = {file = "LICENSE"}
+requires-python = ">=3.7"
+dependencies = [
+    "aiohttp >= 3.8",
+    "chocolate >= 0.0.2",
+    "csvwlib >= 0.3.2",
+    "cryptography >= 35.0",
+    "decorator >= 5.1",
+    "fsspec[gs,s3] >= 2022.2",
+    "gcsfs >= 2022.2",
+    "icecream >= 2.1",
+    "morph-kgc >= 2.0.0",
+    "networkx >= 2.7",
+    "numpy >= 1.23.0",
+    "owlrl >= 6.0.2",
+    "oxrdflib >= 0.3.1",
+    "pandas >= 1.4",
+    "pslpython >= 2.2.2",
+    "pyarrow >= 7.0",
+    "pynvml >= 11.4",
+    "pyshacl >= 0.18",
+    "python-dateutil >= 2.8",
+    "pyvis >= 0.1.9",
+    "rdflib >= 6.1",
+    "requests >= 2.27",
+    "scikit-learn == 1.1.3",
+    "scipy >= 1.8.0",
+    "statsmodels >= 0.13",
+    "tqdm >= 4.63",
+    "urlpath >= 1.2",
+]
+classifiers = [
+    "Development Status :: 5 - Production/Stable",
+    "Intended Audience :: Developers",
+    "Intended Audience :: Education",
+    "Intended Audience :: Information Technology",
+    "Intended Audience :: Science/Research",
+    "License :: OSI Approved :: MIT License",
+    "Operating System :: OS Independent",
+    "Programming Language :: Python :: 3 :: Only",
+    "Programming Language :: Python :: 3.10",
+    "Programming Language :: Python :: 3.7",
+    "Programming Language :: Python :: 3.8",
+    "Programming Language :: Python :: 3.9",
+    "Programming Language :: Python",
+    "Topic :: Scientific/Engineering :: Artificial Intelligence",
+    "Topic :: Scientific/Engineering :: Human Machine Interfaces",
+    "Topic :: Scientific/Engineering :: Information Analysis",
+    "Topic :: Software Development :: Libraries :: Python Modules",
+    "Topic :: Text Processing :: Indexing",
+]
+keywords = [
+    "controlled vocabulary",
+    "cugraph",
+    "deep learning",
+    "embedding",
+    "gpu",
+    "graph algorithms",
+    "igraph",
+    "inference",
+    "interactive visualization",
+    "json-ld",
+    "knowledge graph",
+    "managing namespaces",
+    "morph-kgc",
+    "n3",
+    "networkx",
+    "owl",
+    "pandas",
+    "parquet",
+    "probabilistic soft logic",
+    "psl",
+    "pyvis",
+    "rapids",
+    "rdf",
+    "rml",
+    "roam research",
+    "serialization",
+    "shacl",
+    "skos",
+    "sparql",
+    "statistical relational learning",
+    "topology",
+    "turtle",
+    "validation",
+]
+dynamic = ["version"]
+
+[project.urls]
+Home = "https://derwen.ai/docs/kgl/"
+DOI = "https://doi.org/10.5281/zenodo.6360664"
+Discussions = "https://www.linkedin.com/groups/6725785/"
+DockerHub = "https://hub.docker.com/r/derwenai/kglab"
+Tutorial = "https://derwen.ai/docs/kgl/tutorial/"
+Issues = "https://github.com/DerwenAI/kglab/issues"
+Source = "https://github.com/DerwenAI/kglab"
+
+[project.entry-points."rdf.plugins.store"]
+kglab = "kglab:PropertyStore"
