@@ -10,7 +10,7 @@ import urlpath
 import kglab
 
 
-def test_load_save_measure():
+def test_load_save_measure ():
     """
 Coverage:
 
@@ -67,7 +67,7 @@ Coverage:
         tmp.close()
 
 
-def test_load_parquet_gs():
+def test_load_parquet_gs ():
     """
 Coverage:
 
@@ -80,9 +80,9 @@ Coverage:
     """
     kg = kglab.KnowledgeGraph(
         namespaces = { "doap": "http://usefulinc.com/ns/doap#" }
-        )
+    )
 
-    path = "gs://kglab-tutorial/foaf.parquet"
+    path = "dat/foaf.parquet"
     kg.load_parquet(path)
 
     sparql = """
@@ -105,7 +105,7 @@ Coverage:
     assert val == "Fantasy Fame Game"
 
 
-def test_approx_pareto_front():
+def test_approx_pareto_front ():
     """
 Coverage:
 
@@ -131,7 +131,7 @@ Coverage:
     assert round(df1.iloc[0]["rank"], 4) == 8.6747
 
 
-def test_single_file_load_rdf():
+def test_single_file_load_rdf ():
     """
 Coverage:
 
@@ -152,7 +152,7 @@ Coverage:
     assert node_count == 15
 
 
-def test_multiple_file_load_rdf():
+def test_multiple_file_load_rdf ():
     """
 Coverage:
 
@@ -188,7 +188,7 @@ Coverage:
     assert multifile_node_count == sequential_node_count
 
 
-def test_multiple_file_load_jsonld():
+def test_multiple_file_load_jsonld ():
     """
 Coverage:
 
@@ -228,7 +228,7 @@ Coverage:
         assert multifile_node_count == sequential_node_count
 
 
-def test_multiple_file_load_parquet():
+def test_multiple_file_load_parquet ():
     """
 Coverage:
 
